2008-06-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/python.c:
   Remove unnecessary vStringClear(name) calls after using the name
   buffer, as the convention is now to clear the buffer before use, and
   this is easier to remember to do.


2008-06-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * scintilla/makefile.win32:
   Compile Scintilla without threading support to fix freezes with
   GLib >= 2.16 on Windows.
 * doc/Makefile.am:
   Remove useless path separator.
 * configure.in:
   Set $(docdir) if it is not set automatically.
 * geany.nsi, plugins/makefile.win32, src/makefile.win32, src/main.c,
   src/plugins.c:
   Windows changes:
   Install plugins into lib/ not into plugins/.
   Don't link against libiconv when compiling against GLib 2.14 and
   above (it's statically linked into GLib).
   Install Geany's message catalogs into share/locale rather than
   lib/locale as GTK does since 2.12.2.


2008-06-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/python.c:
   Fix variable names sometimes having leading junk characters.
 * tagmanager/python.c:
   Refactor using findVariable().


2008-06-07  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * THANKS, src/about.c: Added Anna Talianova to list of contributers for
   Czech translation.


2008-06-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/geany.html, doc/geany.html, src/encodings.c:
   Fix two ambiguous encoding names for better compatibility with
   libiconv (closes #1986134).
   Improve the regular expression for detecting encoding cookies to
   allow more variants (e.g. "encoding: utf-8").
 * tagmanager/python.c:
   Use Python from CTags SVN.
   Adapt variable parsing code from the old parser code.
   Fix three bugs (see CTags bugs #1988026, 1988027 and 1988130).
 * waf:
   Update Waf to its latest SVN version.
 * wscript:
   Don't update po files on normal build, add target --update-po for
   this task.